# m5dial-bsp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  justfile  search-index.js  settings.html  src-files.js
examples/: backlight.rs  clock.rs  screen_counter.rs  screen_counter_irq.rs  touch.rs
ft3267/: Cargo.toml
ft3267/src/: lib.rs
m5dial_bsp/: all.html  index.html  macro.board_init!.html  macro.board_init.html  macro.get_buzzer!.html  macro.get_buzzer.html  macro.get_encoder!.html  macro.get_encoder.html  macro.get_port_a_i2c!.html  macro.get_port_a_i2c.html  macro.get_port_b_in!.html  macro.get_port_b_in.html  macro.get_port_b_out!.html  macro.get_port_b_out.html  macro.get_screen!.html  macro.get_screen.html  macro.get_touch!.html  macro.get_touch.html  sidebar-items.js
m5dial_bsp/bsp/: enum.DisplayRotation.html  enum.Level.html  enum.Mode.html  enum.Pull.html  fn.init.html  index.html  macro.error.html  sidebar-items.js  struct.Blocking.html  struct.Brightness.html  struct.BufferedGraphics.html  struct.DefaultPhase.html  struct.Delay.html  struct.DisplayResolution240x240.html  struct.EspI2C.html  struct.ExclusiveDevice.html  struct.Gc9a01.html  struct.I2cConfig.html  struct.Input.html  struct.InputConfig.html  struct.Ledc.html  struct.M5DialBsp.html  struct.NoDelay.html  struct.Output.html  struct.OutputConfig.html  struct.Rate.html  struct.Rmt.html  struct.Rotary.html  struct.SPIDisplayInterface.html  struct.SPIInterface.html  struct.Spi.html  struct.SpiConfig.html  struct.TouchControl.html  trait.DisplayConfiguration.html  trait.DisplayDefinition.html  trait.OutputPin.html  trait.WriteOnlyDataCommand.html  type.M5DialDisplay.html  type.M5DialEncoder.html
m5dial_bsp/buzzer/: enum.Error.html  index.html  sidebar-items.js  struct.Buzzer.html
m5dial_bsp/ft3267/: enum.Ft3265Gesture.html  index.html  sidebar-items.js  struct.Ft3267.html  struct.TouchPoint.html
rtc8563/: Cargo.toml
rtc8563/src/: lib.rs
search.desc/m5dial_bsp/: m5dial_bsp-desc-0-.js
src/: backlight.rs  bsp.rs  buzzer.rs  lib.rs  m5dial.rs
src/bm8563/: mod.rs
src/ft3267/: mod.rs  regs.rs
src/m5dial_bsp/: bsp.rs.html  buzzer.rs.html  lib.rs.html
src/m5dial_bsp/ft3267/: mod.rs.html  regs.rs.html
src/rtc8563/: mod.rs
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/gc9a01/display/: trait.DisplayDefinition.js
type.impl/gc9a01/driver/: struct.Gc9a01.js
type.impl/m5dial_bsp/bsp/: struct.Gc9a01.js  struct.Rotary.js
