[package]
edition = "2021"
name = "m5dial-bsp"
version = "0.3.0"
homepage = "https://github.com/AntoineZen/m5dial-bsp"
repository = "https://github.com/AntoineZen/m5dial-bsp"
documentation = "https://antoinezen.github.io/m5dial-bsp"
description = "Board support package for the M5 Dial."
license-file = "LICENSE"
readme = "README.md"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
    "defmt",
    "esp32s3",
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.23.1", features = ["defmt", "esp32s3", "unstable"] }
gc9a01-rs = "0.4.2"
heapless = "0.8.0"
rotary-encoder-hal = "0.6.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
