[package]
edition = "2021"
name = "m5dial-bsp"
version = "0.6.0"
homepage = "https://github.com/AntoineZen/m5dial-bsp"
repository = "https://github.com/AntoineZen/m5dial-bsp"
documentation = "https://antoinezen.github.io/m5dial-bsp"
description = "Board support package for the M5 Dial."
license-file = "LICENSE"
readme = "README.md"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.100"
defmt-rtt = "0.4.2"
eg-seven-segment = "0.2.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0db79645c7c5d1d3f1ca2f55f6520396483ea731" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0db79645c7c5d1d3f1ca2f55f6520396483ea731", features = [
    "defmt",
    "esp32s3",
    "panic-handler",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0db79645c7c5d1d3f1ca2f55f6520396483ea731", features = ["esp32s3"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "0db79645c7c5d1d3f1ca2f55f6520396483ea731", features = ["defmt", "esp32s3", "unstable"] }
fugit = "0.3.9"
gc9a01-rs = "0.4.2"
heapless = "0.9.2"
rotary-encoder-hal = "0.6.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
