[package]
edition = "2021"
name = "m5dial-bsp"
version = "0.7.0"
homepage = "https://github.com/AntoineZen/m5dial-bsp"
repository = "https://github.com/AntoineZen/m5dial-bsp"
documentation = "https://antoinezen.github.io/m5dial-bsp"
description = "Board support package for the M5 Dial."
license-file = "LICENSE"
readme = "README.md"

[workspace]
resolver = "3"
members = [".", "ft3267", "rtc8563"]


[dependencies]
critical-section = "1.2.0"
defmt = "0.3.100"
defmt-rtt = "0.4.2"
eg-seven-segment = "0.2.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-alloc = "0.9.0"
esp-backtrace = {    version = "0.18.1", features = [
    "defmt",
    "esp32s3",
    "panic-handler",
] }
esp-bootloader-esp-idf = { version="0.4.0", features = ["esp32s3"] }
esp-hal = { version="1.0.0", features = ["defmt", "esp32s3", "unstable"] }
fugit = "0.3.9"
gc9a01-rs = "0.4.2"
heapless = "0.9.2"
rotary-encoder-hal = "0.6.0"
ft3267 = {path="./ft3267", version="0.1.0"}
rtc8563 = {path="./rtc8563", version="0.1.0"}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
